Fix doc for average

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -31,7 +31,7 @@ OK atand.hpp
 OK atanh.hpp
 OK atan.hpp
 OK atanpi.hpp
-average.hpp
+OK average.hpp
 bitfloating.hpp
 bitinteger.hpp
 bitofsign.hpp
