Fix doc for bits

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -35,7 +35,7 @@ OK average.hpp
 W  bitfloating.hpp
 W  bitinteger.hpp
 OK bitofsign.hpp
-bits.hpp
+OK bits.hpp
 bitwise_and.hpp
 bitwise_andnot.hpp
 bitwise_cast.hpp
