Fix doc for bitwise_cast

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -38,7 +38,7 @@ OK bitofsign.hpp
 OK bits.hpp
 OK bitwise_and.hpp
 OK bitwise_andnot.hpp
-bitwise_cast.hpp
+NA bitwise_cast.hpp
 bitwise_notand.hpp
 bitwise_not.hpp
 bitwise_notor.hpp
