Fix doc for bitwise_notor

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -41,7 +41,7 @@ OK bitwise_andnot.hpp
 NA bitwise_cast.hpp
 OK bitwise_notand.hpp
 OK bitwise_not.hpp
-bitwise_notor.hpp
+OK bitwise_notor.hpp
 bitwise_or.hpp
 bitwise_ornot.hpp
 bitwise_select.hpp
