--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -42,7 +42,7 @@ NA bitwise_cast.hpp
 OK bitwise_notand.hpp
 OK bitwise_not.hpp
 OK bitwise_notor.hpp
-bitwise_or.hpp
+OK bitwise_or.hpp
 bitwise_ornot.hpp
 bitwise_select.hpp
 bitwise_xor.hpp
