--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -44,7 +44,7 @@ OK bitwise_not.hpp
 OK bitwise_notor.hpp
 OK bitwise_or.hpp
 OK bitwise_ornot.hpp
-bitwise_select.hpp
+OK bitwise_select.hpp
 bitwise_xor.hpp
 broadcast.hpp
 cbrt.hpp
