Fix doc for compare_greater_equal

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -52,7 +52,7 @@ OK ceil.hpp
 OK clz.hpp
 NA combine.hpp
 OK compare_equal.hpp
-compare_greater_equal.hpp
+OK compare_greater_equal.hpp
 compare_greater.hpp
 compare_less_equal.hpp
 compare_less.hpp
