Fix doc for compare_greater

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -53,7 +53,7 @@ OK clz.hpp
 NA combine.hpp
 OK compare_equal.hpp
 OK compare_greater_equal.hpp
-compare_greater.hpp
+OK compare_greater.hpp
 compare_less_equal.hpp
 compare_less.hpp
 compare_not_equal.hpp
