Fix doc for compare_not_equal

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -56,7 +56,7 @@ OK compare_greater_equal.hpp
 OK compare_greater.hpp
 OK compare_less_equal.hpp
 OK compare_less.hpp
-compare_not_equal.hpp
+OK compare_not_equal.hpp
 complement.hpp
 conj.hpp
 copysign.hpp
