--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -58,7 +58,7 @@ OK compare_less_equal.hpp
 OK compare_less.hpp
 OK compare_not_equal.hpp
 OK complement.hpp
-conj.hpp
+OK conj.hpp
 copysign.hpp
 cosd.hpp
 cosh.hpp
