Change compare_* to NA

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -51,12 +51,12 @@ OK cbrt.hpp
 OK ceil.hpp
 OK clz.hpp
 NA combine.hpp
-OK compare_equal.hpp
-OK compare_greater_equal.hpp
-OK compare_greater.hpp
-OK compare_less_equal.hpp
-OK compare_less.hpp
-OK compare_not_equal.hpp
+NA compare_equal.hpp
+NA compare_greater_equal.hpp
+NA compare_greater.hpp
+NA compare_less_equal.hpp
+NA compare_less.hpp
+NA compare_not_equal.hpp
 OK complement.hpp
 OK conj.hpp
 OK copysign.hpp
