Fix doc for exprecneg

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -97,7 +97,7 @@ OK expm1.hpp
 OK exponentbits.hpp
 OK exponent.hpp
 OK exprecnegc.hpp
-exprecneg.hpp
+OK exprecneg.hpp
 expx2.hpp
 extract.hpp
 ffs.hpp
