Fix doc for extract

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -99,7 +99,7 @@ OK exponent.hpp
 OK exprecnegc.hpp
 OK exprecneg.hpp
 OK expx2.hpp
-extract.hpp
+NA extract.hpp
 ffs.hpp
 firstbitset.hpp
 firstbitunset.hpp
