--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -121,7 +121,7 @@ OK hi.hpp
 OK hmsb.hpp   (*)
 NA horn1.hpp
 NA horn.hpp
-hypot.hpp
+OK hypot.hpp
 iceil.hpp
 if_allbits_else.hpp
 if_allbits_else_zero.hpp
