--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -124,7 +124,7 @@ NA horn.hpp
 OK hypot.hpp
 OK iceil.hpp
 OK if_allbits_else.hpp
-if_allbits_else_zero.hpp
+OK if_allbits_else_zero.hpp
 if_dec.hpp
 if_else_allbits.hpp
 if_else.hpp
