--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -126,7 +126,7 @@ OK iceil.hpp
 OK if_allbits_else.hpp
 OK if_allbits_else_zero.hpp
 OK if_dec.hpp
-if_else_allbits.hpp
+OK if_else_allbits.hpp
 if_else.hpp
 if_else_nan.hpp
 if_else_zero.hpp
