Fix doc for if_else_zero

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -129,7 +129,7 @@ OK if_dec.hpp
 OK if_else_allbits.hpp
 OK if_else.hpp
 OK if_else_nan.hpp
-if_else_zero.hpp
+OK if_else_zero.hpp
 if_inc.hpp
 ifix.hpp
 ifloor.hpp
