--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -130,7 +130,7 @@ OK if_else_allbits.hpp
 OK if_else.hpp
 OK if_else_nan.hpp
 OK if_else_zero.hpp
-if_inc.hpp
+OK if_inc.hpp
 ifix.hpp
 ifloor.hpp
 if_minus.hpp
