--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -132,7 +132,7 @@ OK if_else_nan.hpp
 OK if_else_zero.hpp
 OK if_inc.hpp
 OK ifix.hpp
-ifloor.hpp
+OK ifloor.hpp
 if_minus.hpp
 if_nan_else.hpp
 if_neg.hpp
