Fix doc for if_nan_else

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -134,7 +134,7 @@ OK if_inc.hpp
 OK ifix.hpp
 OK ifloor.hpp
 OK if_minus.hpp
-if_nan_else.hpp
+OK if_nan_else.hpp
 if_neg.hpp
 ifnot_dec.hpp
 ifnot_inc.hpp
