--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -137,7 +137,7 @@ OK if_minus.hpp
 OK if_nan_else.hpp
 OK if_neg.hpp
 OK ifnot_dec.hpp
-ifnot_inc.hpp
+OK ifnot_inc.hpp
 ifnot_minus.hpp
 ifnot_neg.hpp
 ifnot_plus.hpp
