Fix doc for ifnot_neg

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -139,7 +139,7 @@ OK if_neg.hpp
 OK ifnot_dec.hpp
 OK ifnot_inc.hpp
 OK ifnot_minus.hpp
-ifnot_neg.hpp
+OK ifnot_neg.hpp
 ifnot_plus.hpp
 if_one_else_zero.hpp
 if_plus.hpp
