--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -145,7 +145,7 @@ OK if_one_else_zero.hpp
 OK if_plus.hpp
 NA ifrexp.hpp
 OK if_zero_else_allbits.hpp
-if_zero_else.hpp
+OK if_zero_else.hpp
 if_zero_else_one.hpp
 ilog2.hpp
 ilogb.hpp
