Fix doc for ilog2

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -147,7 +147,7 @@ NA ifrexp.hpp
 OK if_zero_else_allbits.hpp
 OK if_zero_else.hpp
 OK if_zero_else_one.hpp
-ilog2.hpp
+OK ilog2.hpp
 ilogb.hpp
 inc.hpp
 indeg.hpp
