--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -149,7 +149,7 @@ OK if_zero_else.hpp
 OK if_zero_else_one.hpp
 OK ilog2.hpp
 OK ilogb.hpp
-inc.hpp
+OK inc.hpp
 indeg.hpp
 inearbyint.hpp
 inrad.hpp
