--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -153,7 +153,7 @@ OK inc.hpp
 OK indeg.hpp
 OK inearbyint.hpp
 OK inrad.hpp
-insert.hpp
+NA insert.hpp
 interleave_even.hpp
 interleave_first.hpp
 interleave.hpp
