Fix doc for interleave_first

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -155,7 +155,7 @@ OK inearbyint.hpp
 OK inrad.hpp
 NA insert.hpp
 OK interleave_even.hpp
-interleave_first.hpp
+OK interleave_first.hpp
 interleave.hpp
 interleave_odd.hpp
 interleave_second.hpp
