Fix doc for interleave_second

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -158,7 +158,7 @@ OK interleave_even.hpp
 OK interleave_first.hpp
 NA interleave.hpp
 OK interleave_odd.hpp
-interleave_second.hpp
+OK interleave_second.hpp
 iround.hpp
 is_denormal.hpp
 is_equal.hpp
