--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -159,7 +159,7 @@ OK interleave_first.hpp
 NA interleave.hpp
 OK interleave_odd.hpp
 OK interleave_second.hpp
-iround.hpp
+OK iround.hpp
 is_denormal.hpp
 is_equal.hpp
 is_equal_with_equal_nans.hpp
