Fix doc for is_equal

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -161,7 +161,7 @@ OK interleave_odd.hpp
 OK interleave_second.hpp
 OK iround.hpp
 OK is_denormal.hpp
-is_equal.hpp
+OK is_equal.hpp
 is_equal_with_equal_nans.hpp
 is_eqz.hpp
 is_even.hpp
