--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -164,7 +164,7 @@ OK is_denormal.hpp
 OK is_equal.hpp
 OK is_equal_with_equal_nans.hpp
 OK is_eqz.hpp
-is_even.hpp
+OK is_even.hpp
 is_finite.hpp
 is_flint.hpp
 is_gez.hpp
