Fix doc for is_gtz

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -170,7 +170,7 @@ OK is_flint.hpp
 OK is_gez.hpp
 OK is_greater_equal.hpp
 OK is_greater.hpp
-is_gtz.hpp
+OK is_gtz.hpp
 is_imag.hpp
 isincluded_c.hpp
 isincluded.hpp
