--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -174,7 +174,7 @@ OK is_gtz.hpp
 OK is_imag.hpp
 NA isincluded_c.hpp
 NA isincluded.hpp
-is_inf.hpp
+OK is_inf.hpp
 is_invalid.hpp
 is_less_equal.hpp
 is_lessgreater.hpp
