--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -176,7 +176,7 @@ NA isincluded_c.hpp
 NA isincluded.hpp
 OK is_inf.hpp
 OK is_invalid.hpp
-is_less_equal.hpp
+OK is_less_equal.hpp
 is_lessgreater.hpp
 is_less.hpp
 is_lez.hpp
