--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -177,7 +177,7 @@ NA isincluded.hpp
 OK is_inf.hpp
 OK is_invalid.hpp
 OK is_less_equal.hpp
-is_lessgreater.hpp
+OK is_lessgreater.hpp
 is_less.hpp
 is_lez.hpp
 is_ltz.hpp
