--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -179,7 +179,7 @@ OK is_invalid.hpp
 OK is_less_equal.hpp
 OK is_lessgreater.hpp
 OK is_less.hpp
-is_lez.hpp
+OK is_lez.hpp
 is_ltz.hpp
 is_nan.hpp
 is_negative.hpp
