--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -180,7 +180,7 @@ OK is_less_equal.hpp
 OK is_lessgreater.hpp
 OK is_less.hpp
 OK is_lez.hpp
-is_ltz.hpp
+OK is_ltz.hpp
 is_nan.hpp
 is_negative.hpp
 is_nez.hpp
