Fix doc for is_negative

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -182,7 +182,7 @@ OK is_less.hpp
 OK is_lez.hpp
 OK is_ltz.hpp
 OK is_nan.hpp
-is_negative.hpp
+OK is_negative.hpp
 is_nez.hpp
 is_ngez.hpp
 is_ngtz.hpp
