Fix doc for is_nez

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -183,7 +183,7 @@ OK is_lez.hpp
 OK is_ltz.hpp
 OK is_nan.hpp
 OK is_negative.hpp
-is_nez.hpp
+OK is_nez.hpp
 is_ngez.hpp
 is_ngtz.hpp
 is_nlez.hpp
