--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -185,7 +185,7 @@ OK is_nan.hpp
 OK is_negative.hpp
 OK is_nez.hpp
 OK is_ngez.hpp
-is_ngtz.hpp
+OK is_ngtz.hpp
 is_nlez.hpp
 is_nltz.hpp
 is_normal.hpp
