--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -190,7 +190,7 @@ OK is_nlez.hpp
 OK is_nltz.hpp
 OK is_normal.hpp
 OK is_not_denormal.hpp
-is_not_equal.hpp
+OK is_not_equal.hpp
 is_not_equal_with_equal_nans.hpp
 is_not_greater_equal.hpp
 is_not_greater.hpp
