--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -193,7 +193,7 @@ OK is_not_denormal.hpp
 OK is_not_equal.hpp
 OK is_not_equal_with_equal_nans.hpp
 OK is_not_greater_equal.hpp
-is_not_greater.hpp
+OK is_not_greater.hpp
 is_not_imag.hpp
 is_not_infinite.hpp
 is_not_less_equal.hpp
