--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -198,7 +198,7 @@ OK is_not_imag.hpp
 OK is_not_infinite.hpp
 OK is_not_less_equal.hpp
 OK is_not_less.hpp
-is_not_nan.hpp
+OK is_not_nan.hpp
 is_not_real.hpp
 is_odd.hpp
 is_ord.hpp
