--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -199,7 +199,7 @@ OK is_not_infinite.hpp
 OK is_not_less_equal.hpp
 OK is_not_less.hpp
 OK is_not_nan.hpp
-is_not_real.hpp
+OK is_not_real.hpp
 is_odd.hpp
 is_ord.hpp
 is_positive.hpp
