Fix doc for is_positive

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -202,7 +202,7 @@ OK is_not_nan.hpp
 OK is_not_real.hpp
 OK is_odd.hpp
 OK is_ord.hpp
-is_positive.hpp
+OK is_positive.hpp
 is_real.hpp
 is_simd_logical.hpp
 is_unord.hpp
