Fix doc for logical_not

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -216,7 +216,7 @@ OK log.hpp
 OK logical_and.hpp
 OK logical_andnot.hpp
 OK logical_notand.hpp
-logical_not.hpp
+OK logical_not.hpp
 logical_notor.hpp
 logical_or.hpp
 logical_ornot.hpp
