--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -218,7 +218,7 @@ OK logical_andnot.hpp
 OK logical_notand.hpp
 OK logical_not.hpp
 OK logical_notor.hpp
-logical_or.hpp
+OK logical_or.hpp
 logical_ornot.hpp
 logical_xor.hpp
 lo.hpp
