Fix doc for lookup

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -222,7 +222,7 @@ OK logical_or.hpp
 OK logical_ornot.hpp
 OK logical_xor.hpp
 OK lo.hpp
-lookup.hpp
+OK lookup.hpp
 majority.hpp
 make.hpp
 mantissa.hpp
