Fix doc for negate

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -245,7 +245,7 @@ OK multiplies.hpp
 NA musl.hpp
 NA nbtrue.hpp
 OK nearbyint.hpp
-negate.hpp
+OK negate.hpp
 negatenz.hpp
 nextafter.hpp
 next.hpp
