Fix doc for refine_rqrt

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -268,7 +268,7 @@ OK quadrant.hpp
 NA raw.hpp
 OK rec.hpp
 OK refine_rec.hpp
-refine_rsqrt.hpp
+OK refine_rsqrt.hpp
 rem_2pi.hpp
 rem.hpp
 rem_pio2_cephes.hpp
