--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -271,7 +271,7 @@ OK refine_rec.hpp
 OK refine_rsqrt.hpp
 OK rem_2pi.hpp
 OK rem.hpp
-rem_pio2_cephes.hpp
+NA rem_pio2_cephes.hpp
 rem_pio2.hpp
 rem_pio2_medium.hpp
 rem_pio2_straight.hpp
