Fix doc for rem_pio2_straight

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -274,7 +274,7 @@ OK rem.hpp
 NA rem_pio2_cephes.hpp
 NA rem_pio2.hpp
 NA rem_pio2_medium.hpp
-rem_pio2_straight.hpp
+NA rem_pio2_straight.hpp
 remquo.hpp
 repeat_lower_half.hpp
 repeat_upper_half.hpp
