Fix doc for remquo

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -275,7 +275,7 @@ NA rem_pio2_cephes.hpp
 NA rem_pio2.hpp
 NA rem_pio2_medium.hpp
 NA rem_pio2_straight.hpp
-remquo.hpp
+NA remquo.hpp
 repeat_lower_half.hpp
 repeat_upper_half.hpp
 residual.hpp
