Fix doc for residual

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -278,7 +278,7 @@ NA rem_pio2_straight.hpp
 NA remquo.hpp
 OK repeat_lower_half.hpp
 OK repeat_upper_half.hpp
-residual.hpp
+NA residual.hpp
 restricted.hpp
 reversebits.hpp
 reverse.hpp
