Fix doc for reversebits

--- a/include/boost/simd/function/TODO
+++ b/include/boost/simd/function/TODO
@@ -280,7 +280,7 @@ OK repeat_lower_half.hpp
 OK repeat_upper_half.hpp
 NA residual.hpp
 NA restricted.hpp
-reversebits.hpp
+OK reversebits.hpp
 reverse.hpp
 rol.hpp
 ror.hpp
